fix overflow x

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,7 +1,5 @@
 body {
   height: 520vh;
-  width: 100vw;
-  overflow-x: hidden;
 }
 
 .landing {
